name:                cyphy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/cyphy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Zelus
                     , NotQuickCheck
                     , CyphyUtils
                     , WaterHeater
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.8.1
                     , random >= 1.1
                     , containers >= 0.5.6.2
                     , tasty >= 0.11.0.2
                     , tasty-quickcheck >= 0.8.4
  default-language:    Haskell2010

-- executable cyphy-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , cyphy
--   default-language:    Haskell2010

test-suite cyphy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.8.1
                     , cyphy
                     , tasty >= 0.11.0.2
                     , tasty-quickcheck >= 0.8.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/cyphy
