name:                cyphy
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , test
  exposed-modules:     Zelus
                     , NotQuickCheck
                     , CyphyUtils
                     , VBool
                     , PtLTL
                     , WaterHeater
                     , TestWaterHeater
                     , CruiseControl
                     , TestCruiseControl
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.8.1
                     , random >= 1.1
                     , containers >= 0.5.6.2
                     , tasty >= 0.11.0.2
                     , tasty-quickcheck >= 0.8.4
  default-language:    Haskell2010

test-suite cyphy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.8.1
                     , cyphy
                     , tasty >= 0.11.0.2
                     , tasty-quickcheck >= 0.8.4
  other-modules:       TestWaterHeater
                     , TestCruiseControl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
